# doccompare

./: .gitignore  DocCompare.icns  README.md  build_dmg.sh  bundle_dylibs.py  pyproject.toml  setup.py
src/doccompare/: __init__.py  app.py  cli.py  gui.py  models.py  utils.py
src/doccompare/comparison/: __init__.py  adapters.py  differ.py  formatter.py  move_detector.py  ooxml_engine.py  pdf_engine.py  structure_changes.py
src/doccompare/parsers/: __init__.py  base.py  docx_parser.py  pdf_parser.py
src/doccompare/rendering/: __init__.py  html_builder.py  pdf_pipeline.py  pdf_renderer.py  styles.css
tests/: conftest.py  test_differ.py  test_move_detector.py  test_parsers.py  test_rendering.py  test_structure_changes.py
