[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doccompare"
version = "0.1.0"
description = "CLI tool to compare .docx documents and generate a color-coded PDF diff report"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-docx>=1.1",
    "diff-match-patch>=20230430",
    "rapidfuzz>=3.0",
    "WeasyPrint>=62",
    "click>=8.0",
    "loguru>=0.7",
    "rich>=13.0",
    "Pillow>=10.0",
    "pypdf>=4.0",
    "lxml>=4.9",
]

[project.scripts]
doccompare = "doccompare.cli:compare"
doccompare-gui = "doccompare.gui:main"

[tool.hatch.build.targets.wheel]
packages = ["src/doccompare"]

[tool.hatch.build.targets.wheel.force-include]
"src/doccompare/assets" = "doccompare/assets"
